add id to output

--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <title>Hot Bikes!</title>
   </head>
   <body>
-    <h1>Enter your search terms:</h1>
-    <form id="bike-form">
-      <label for="per-page">Enter max result #</label>
-      <input id="per-page" value="10" type="number">
-      <br>
-      <label for="location">Enter location (zip code or "IP" only)</label>
-      <input id="location" value="97203" type="number">
-      <br>
-      <label for="distance">Search radius (in mi)</label>
-      <input id="distance" value="10" type="number">
-      <br>
-      <button type="submit">Search</button>
-    </form>
-    <ul id="result"></ul>
+    <div class="container">
+      <h1>Enter your search terms:</h1>
+      <form id="bike-form">
+        <label for="per-page">Enter max result #</label>
+        <input id="per-page" value="10" type="number">
+        <br>
+        <label for="location">Enter location (zip code or "IP" only)</label>
+        <input id="location" value="97203" type="number">
+        <br>
+        <label for="distance">Search radius (in mi)</label>
+        <input id="distance" value="10" type="number">
+        <br>
+        <button type="submit">Search</button>
+      </form>
+      <ul id="result"></ul>
+   </div>
   </body>
 </html>
