add css to style output of list of bikes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <br>
         <button type="submit">Search</button>
       </form>
-      <ul id="result"></ul>
+      <ul id="result">
+
+      </ul>
    </div>
   </body>
 </html>
